--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
 }
 
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 3px;
+  height: 3px;
   background: #4f46e5;
 }
 
@@ -23,4 +24,9 @@
   background-color: #4f46e5;
   border-radius: 9px;
   background-clip: content-box;
+}
+
+::selection {
+  color: white;
+  background-color: #6d67ea;
 }
